add several url
