# app/urls.py
@@ -5,4 +5,6 @@ from .views import *
 urlpatterns = [
     path('api-auth/', include('rest_framework.urls')),
     path('api/v1/pereval/', PerevalCreate.as_view()),
+    path('api/v1/pereval/<int:pk>/status/', PerevalStatus.as_view()),
+    path('api/v1/pereval/<int:pk>/', PerevalDetail.as_view()),
 ]
